--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -52,17 +52,23 @@ jobs:
         copy config.yaml build\windows\
         copy README.md build\windows\
         
-        echo @echo off > build\windows\start.bat
-        echo echo Starting Forward API Gateway... >> build\windows\start.bat
-        echo forward-api-gateway.exe >> build\windows\start.bat
-        echo pause >> build\windows\start.bat
+        # Create start.bat
+        (
+          echo @echo off
+          echo echo Starting Forward API Gateway...
+          echo forward-api-gateway.exe
+          echo pause
+        ) > build\windows\start.bat
         
-        echo @echo off > build\windows\install-service.bat
-        echo echo Installing Forward API Gateway as Windows Service... >> build\windows\install-service.bat
-        echo sc create "ForwardAPI" binPath="%%~dp0forward-api-gateway.exe" start=auto >> build\windows\install-service.bat
-        echo sc description "ForwardAPI" "Forward API Gateway Service" >> build\windows\install-service.bat
-        echo echo Service installed. To start: sc start ForwardAPI >> build\windows\install-service.bat
-        echo pause >> build\windows\install-service.bat
+        # Create install-service.bat
+        (
+          echo @echo off
+          echo echo Installing Forward API Gateway as Windows Service...
+          echo sc create "ForwardAPI" binPath="%%~dp0forward-api-gateway.exe" start=auto
+          echo sc description "ForwardAPI" "Forward API Gateway Service"
+          echo echo Service installed. To start: sc start ForwardAPI
+          echo pause
+        ) > build\windows\install-service.bat
     
     - name: Debug - Check final package
       run: |
