--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -25,6 +25,10 @@ jobs:
         pip install fastapi uvicorn loguru pyyaml httpx pydantic
         pip install pyinstaller
     
+    - name: Test import
+      run: |
+        python -c "import app.main; print('Import successful')"
+    
     - name: Debug - List files
       run: |
         echo "Current directory:"
@@ -36,7 +40,7 @@ jobs:
     
     - name: Build Windows executable
       run: |
-        pyinstaller --onefile --console --name forward-api-gateway app/main.py --add-data "config.yaml;." --add-data "app;app" --hidden-import uvicorn.logging --hidden-import uvicorn.loops --hidden-import uvicorn.loops.auto --hidden-import uvicorn.protocols --hidden-import uvicorn.protocols.http --hidden-import uvicorn.protocols.http.auto --hidden-import uvicorn.protocols.websockets --hidden-import uvicorn.protocols.websockets.auto --hidden-import uvicorn.lifespan --hidden-import uvicorn.lifespan.on --hidden-import loguru --hidden-import yaml --hidden-import httpx --hidden-import fastapi --hidden-import starlette --hidden-import pydantic
+        pyinstaller --onefile --console --name forward-api-gateway app/main.py --add-data "config.yaml;." --add-data "app;app" --hidden-import uvicorn.logging --hidden-import uvicorn.loops --hidden-import uvicorn.loops.auto --hidden-import uvicorn.protocols --hidden-import uvicorn.protocols.http --hidden-import uvicorn.protocols.http.auto --hidden-import uvicorn.protocols.websockets --hidden-import uvicorn.protocols.websockets.auto --hidden-import uvicorn.lifespan --hidden-import uvicorn.lifespan.on --hidden-import loguru --hidden-import yaml --hidden-import httpx --hidden-import fastapi --hidden-import starlette --hidden-import pydantic --hidden-import asyncio --hidden-import contextlib
     
     - name: Debug - Check build output
       run: |
