--- a/.github/workflows/build-with-spec.yml
+++ b/.github/workflows/build-with-spec.yml
@@ -1,4 +1,4 @@
-name: Simple Build Fixed
+name: Build with Spec
 
 on:
   workflow_dispatch:
@@ -25,33 +25,18 @@ jobs:
         python -c "import app.main; print('Import OK')"
         python -c "from app.config import config; print('Config OK:', len(config.routes))"
     
-    - name: Build executable
+    - name: Build with spec file
       run: |
-        pyinstaller --onefile --console app/main.py --name forward-api-gateway --add-data "app;app" --add-data "config.yaml;." --hidden-import app.config --hidden-import app.logger --hidden-import app.middleware --hidden-import app.forwarder
+        pyinstaller forward-api-gateway.spec
     
     - name: Create package
       run: |
         mkdir build\windows
         copy dist\forward-api-gateway.exe build\windows\
         copy config.yaml build\windows\
-        
-        # Create start.bat
-        (
-          echo @echo off
-          echo forward-api-gateway.exe
-        ) > build\windows\start.bat
-        
-        # Create install-service.bat
-        (
-          echo @echo off
-          echo sc create "ForwardAPI" binPath="%%~dp0forward-api-gateway.exe" start=auto
-          echo sc description "ForwardAPI" "Forward API Gateway Service"
-          echo echo Service installed. To start: sc start ForwardAPI
-          echo pause
-        ) > build\windows\install-service.bat
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: windows-executable-fixed
+        name: windows-executable-spec
         path: build/windows/ 
