Fix simple-build-fixed to copy existing bat files instead of creating them

--- a/.github/workflows/simple-build-fixed.yml
+++ b/.github/workflows/simple-build-fixed.yml
@@ -34,6 +34,8 @@ jobs:
         mkdir build\windows
         copy dist\forward-api-gateway.exe build\windows\
         copy config.yaml build\windows\
+        copy start-windows.bat build\windows\
+        copy install-service-windows.bat build\windows\
     
     - name: Upload artifact
       uses: actions/upload-artifact@v4
